# sysl

./: CMakeLists.txt  test.sh
arcana/: CMakeLists.txt
arcana/src/: arcana.h  name.cpp  name.h  token-table.cpp  tokens.cpp  tree.cpp  unit.cpp
arcana/src/parsers/: bitset.cpp  declaration.cpp  enum.cpp  func.cpp  ident.cpp  lit.cpp  namespace.cpp  parsers.h  struct.cpp  types.cpp
arcana/tests/: token_table.cpp  tokens.cpp  utils.h
arcanac/: CMakeLists.txt
arcanac/src/: args.cpp  args.h  ast.cpp  ast.cpp.bak  ast.h  main.cpp  tokenize.cpp  tokenize.h  util.h.bak
examples/: arcana.sysl  basics.sysl  bitset.sysl  test.sysl
symbol/: CMakeLists.txt
symbol/src/: symbol.c  symbol.h
symbol/tests/: symbol.cpp
sysl/: CMakeLists.txt
sysl/src/: tokens.cpp  tokens.h
sysl/tests/: token_table.cpp  tokens.cpp  utils.cpp  utils.h
sysltree/: CMakeLists.txt
sysltree/src/: tokens.cpp  tokens.h  tree.cpp  tree.h
sysltree/src/parsers/: bitset.cpp  declaration.cpp  enum.cpp  func.cpp  ident.cpp  lit.cpp  namespace.cpp  parsers.h  struct.cpp  types.cpp
sysltree/tests/: token_table.cpp  tokens.cpp  utils.cpp  utils.h
util/: CMakeLists.txt
